# alibabacloud-tablestore-for-agent-memory

./: .gitignore  README.md
.aoneci/: publish_pypi.sh  publish_pypi.yaml
java/: .gitignore  Makefile  README.md  eclipse-formatter.xml  pom.xml
java/core/: pom.xml
java/core/src/main/java/com/aliyun/openservices/tablestore/agent/knowledge/: KnowledgeSearchRequest.java  KnowledgeStore.java  KnowledgeStoreImpl.java
java/core/src/main/java/com/aliyun/openservices/tablestore/agent/memory/: MemorySearchRequest.java  MemoryStore.java  MemoryStoreImpl.java
java/core/src/main/java/com/aliyun/openservices/tablestore/agent/model/: Document.java  DocumentHit.java  Message.java  MetaType.java  Metadata.java  Response.java  Session.java
java/core/src/main/java/com/aliyun/openservices/tablestore/agent/util/: Pair.java  (+7 more)
java/core/src/test/java/com/aliyun/openservices/tablestore/agent/: BaseTest.java
java/examples/: pom.xml
java/spring-ai/: pom.xml
java/spring-ai/src/test/resources/: log4j2.properties
python/: .gitignore  Makefile  README.md  pyproject.toml
python/docs/: knowledge_store_tutorial.ipynb  memory_store_demo.ipynb  memory_store_tutorial.ipynb
python/src/tablestore_for_agent_memory/base/: base_knowledge_store.py  base_memory_store.py  common.py  filter.py
python/src/tablestore_for_agent_memory/knowledge/: knowledge_store.py
python/src/tablestore_for_agent_memory/memory/: memory_store.py
python/src/tablestore_for_agent_memory/util/: ots.py  tablestore_helper.py
python/tests/: conftest.py  test_knowledge_store.py  test_memory_store.py  test_ots.py
(+51 files in other folders)
